--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "fuse.js": "^7.0.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
