--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "deploy": "gh-pages -d dist"
+    "deploy": "bun run build; gh-pages -d dist"
   },
   "dependencies": {
     "chart.js": "^*",
-    "endent": "^2.1.0",
+    "endent": "^*",
     "fuse.js": "^*",
     "vue": "^*",
-    "vue-mermaid-string": "^7.0.0",
+    "vue-mermaid-string": "^*",
     "vue-router": "^*"
   },
   "devDependencies": {
