--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy": "bun run build; gh-pages -d dist"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "chart.js": "^*",
     "endent": "^2.1.0",
     "fuse.js": "^*",
