update package files

--- a/package.json
+++ b/package.json
@@ -16,31 +16,31 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
-    "chart.js": "^*",
+    "chart.js": "^4.4.8",
     "endent": "^2.1.0",
-    "fuse.js": "^*",
-    "vue": "^*",
+    "fuse.js": "^7.1.0",
+    "vue": "^3.5.13",
     "vue-mermaid-string": "^7.0.0",
-    "vue-router": "^*"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "gh-pages": "^*",
-    "@rushstack/eslint-patch": "^*",
-    "@tsconfig/node20": "^*",
-    "@types/node": "^*",
-    "@vitejs/plugin-vue": "^*",
-    "@vue/eslint-config-prettier": "^*",
-    "@vue/eslint-config-typescript": "^*",
-    "@vue/tsconfig": "^*",
-    "autoprefixer": "^*",
-    "eslint": "^*",
-    "eslint-plugin-vue": "^*",
-    "npm-run-all2": "^*",
-    "postcss": "^*",
-    "prettier": "^*",
-    "tailwindcss": "^*",
-    "typescript": "^*",
-    "vite": "^*",
-    "vue-tsc": "^*"
+    "gh-pages": "^6.3.0",
+    "@rushstack/eslint-patch": "^1.10.5",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/node": "^22.13.5",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.4.0",
+    "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.21.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.2",
+    "tailwindcss": "4.0.9",
+    "typescript": "^5.7.3",
+    "vite": "^6.2.0",
+    "vue-tsc": "^2.2.4"
   }
 }
