--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.2",
-    "tailwindcss": "4.0.9",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
     "vite": "^6.2.0",
     "vue-tsc": "^2.2.4"
