--- a/package.json
+++ b/package.json
@@ -24,21 +24,21 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "@rushstack/eslint-patch": "^1.10.5",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^22.13.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/tsconfig": "^0.7.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.21.0",
     "eslint-plugin-vue": "^9.32.0",
+    "gh-pages": "^6.3.0",
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3",
     "vite": "^6.2.0",
     "vue-tsc": "^2.2.4"
