--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.21.0",
-    "eslint-plugin-vue": "^9.32.0",
     "gh-pages": "^6.3.0",
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.2",
     "tailwindcss": "^4.0.0",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
     "vite": "^6.2.0",
+    "vite-plugin-checker": "^0.9.3",
     "vue-tsc": "^2.2.4"
   }
 }
