--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.8",
     "endent": "^2.1.0",
     "fuse.js": "^7.1.0",
+    "marked": "^15.0.12",
     "vue": "^3.5.13",
     "vue-mermaid-string": "^7.0.0",
     "vue-router": "^4.5.0"
